--- a/Reservation/Views/Home/Index.cshtml
+++ b/Reservation/Views/Home/Index.cshtml
@@ -66,7 +66,7 @@
 
             </div>
             <div class="btns-container">
-                <a href="#" class="btn btn-md" data-modal-link="email-ticket">خرید بلیط</a>
+                <a href="#prices"  class="btn btn-md" >خرید بلیط</a>
                 <a href="#" class="btn btn-outline btn-md" data-modal-link="0">ویدیو</a>
             </div>
 
@@ -130,7 +130,7 @@
     <section id="about" class="section align-center">
         <div class="container">
             <span class="icon section-icon icon-multimedia-12"></span>
-            <h3>درباره نگاه</h3>
+            <h3>درباره همایش افزار نگاه</h3>
             <p class="text-alt">نگاه، برگزار کننده ایونت های بزرگ در سطح ایران و بین الملل</p>
 
             <div class="tabs-wrapper tabs-horizontal">
@@ -140,10 +140,18 @@
                             <img src="assets/img/negahLogo.png" alt="" class="img-responsive">
                         </div>
                         <div class="col-sm-7 align-right">
-                            <p>برآیند فرجامین کوشش همیشگی بشر برای بهبود شرایط زندگی در طول حیات چند هزار سالۀ او در هر مراحل جاودانگی آدمی در رسیدن به هویت بوده است. جامعه‌‌ای که ورای ساختار کالبد خود، نشان از روح و حس معنایی در وجودیت آفرینشات هم‌‌سو با نیاز انسان امروزی با اهداف بهره‌‌مندی و شکوفایی در جهت تحققات که نمایان‌‌گر آرمان‌‌های سازندگان آن است به‌‌شمار می‌‌آید. </p>
-                            <div class="btns-container">
-                                <a href="#" class="btn btn-md" data-modal-link="about">ادامه مطلب</a>
-                            </div>
+                            <p>
+                                بزرگ فکر کردن کافی نیست، بزرگی را باید نشان داد
+                            </p>
+                            <p>
+                                خلق اثری ماندگار از برند شما هدف نگاه است. اصلی‌ترین دغدغه انسان در طول حیات چندین هزار ساله خود ما برای باید های زیستی جاودانگی و ماندگاری بوده است. چرا که ماندگاری در جهت خلق ایده ها و برنامه های مدیریتی با بهره گیری از دستاوردهای انسان امروزی که وارث از پیشینیان مان تلقی می گردد، زمینهای برای بقای ساختار کاربرد انسان و جامعه میباشد به طوری که چنان جامعه ای اصالتی دارد که به آن هویت می بخشد و فارغ از دغدغه های زیستی زمینه‌ای برای پایداری در جهت تعالی آدمی با نیازهای ساکنین آن جامعه همسو می گردد. از اینرو همایش افزار نگاه با بهره‌گیری از فناوری‌های نوین و هوشمندانه با رویکردی آینده نگر و جهانی در ساختار اقتصاد جامعه، فراتر از یک برند در مسیر رساندن مدیران ملی و بومی در شرایط چالش انگیز تحریم و اپیدمی کووید ۱۹ که نقش خود را به عنوان مدیر به نحو احسن ایفا کرده اند و اقتصاد کشور عزیزمان ایران را زنده نگه داشته اند به جهانیان معرفی می کند و ضامن ماندگاری آنها در تاریخ ایران می شود.
+                            </p>
+                            <p>
+                                پا به پای هم ایستاده ایم تا خدا و جهانیان برای من کف بزنند و یاریمان کنند...
+                            </p>
+                            <!--<div class="btns-container">
+        <a href="#" class="btn btn-md" data-modal-link="about">ادامه مطلب</a>
+    </div>-->
                         </div>
 
 
@@ -165,8 +173,13 @@
                 <div class="tab-content">
                     <div id="horizontal_tab2" class="tab-pane fade active in">
                         <div class="col-sm-7 align-right">
-                            <h6>شوالیه مدیران برتر چیست؟</h6>
-                            <p>همایش سراسری کنسرسیوم نگاه با یک هدف واحد و افق‌‌های نوین در آموزش درپی کشف و خلق آن با رهنمودهای مطابق و حوزه‌‌های مختلف در ارتقای اجرایی‌‌سازی در راستای رویکردهای زمینه‌‌ساز با افق‌‌های نگرشی امید است زمینه‌‌ای گسترده در پیشبرد طرح‌‌های علمی - عملی و فرهنگی کشور مؤثر واقع گردد. از این‌‌رو کنسرسیوم نگاه در راستای بررسی و تحقق موارد فوق‌‌الذکر قصد دارد همایش سراسری را تحت‌‌عنوان شوالیه‌‌های مدیران به‌‌دنبال آن است كه با گردهم‌‌آوردن مدیران برجسته و موفق، صاحب‌‌نظران، انديشمندان، دانشگاهيان، سياست‌‌گزاران، سازمان‌‌هاي ذي‌‌ربط، مهندسين مشاور متخصصان و علاقه‌‌مندان به این حوزه، به تبيين مفاهيم و اهداف مرتبط با محورهای همایش بپردازد در تجلیل از مدیران مفید واقع گردد و فرصتی مناسب برای تبادل  اطلاعات و ارائۀ همکارهای لازم به‌‌عمل آید.</p>
+                            <h6>شوالیه مدیران برتر</h6>
+                            <p>
+                                همایش سراسری شوالیه مدیران برتر اولین همایش تجلیل از مدیران برتر و نمونه کشوری در سال یک هزار و سیصد و نود و نه با توجه به اوضاع خاص اقتصادی کشور برگزار می‌شود. برآیند فرجامین کوشش همیشگی بشر برای بهبود شرایط زندگی در طول حیات چند هزار ساله جاودانگی و ماندگاری بوده است، معنای که بالاتر از باید های زیستی انسان تولدی از هستی بی نهایت طلبی بشر تلاش برای تجسم بخشیدن به ارزش های معنوی اش در جهت کمال بیان می‌شود و حیات هر جامعه در پاسخگویی به توفیقات در رابطه با همین نیازهاست. از این رو کنسرسیوم نگاه با یک نگاهی بدون حد و مرز و منحصر به فرد مطابق با چارچوب ملی به دنبال خلق ایده با ابعاد وسیع با توجه به نیاز های مادی و معنوی خود و با بهره گیری از یک هدف واحد افق های نوین و و با رویکردی آینده نگر در پی کشف و خلق آن در ساختار جامعه با رهنمودهای مطابق و حوزه‌های مختلف در ارتقای اجرایی سازی در راستای رویکردهای زمینه‌ساز با افق های نگرشی است.
+                            </p>
+                            <div class="btns-container">
+                                <a href="#" class="btn btn-md" data-modal-link="about">ادامه مطلب</a>
+                            </div>
                         </div>
                         <div class="col-sm-5 img-column">
                             <img src="assets/img/imac-371x412.png" alt="" class="img-responsive">
@@ -395,11 +408,11 @@
                         <h3 class="name">دکتر کامران صحت</h3>
                         <p class="text-alt"><small>مدرس و مشاور برترین برندهای داخلی و بین المللی</small></p>
                         <p class="about">دکتر کامران صحت متولد 24/03/1353 در شهر تهران می باشد. ایشان دارای مدرک لیسانس مترجمی زبان انگلیسی از دانشگاه آزاد اسلامی واحد تهران مرکز و مدرک MBA گرایش بازاریابی و مدرک DBA گرایش بازاریابی از لندن می باشند.</p>
-                        <ul class="speaker-socials">
-                            <li><a href="#"><span class="fa fa-facebook-official"></span></a></li>
-                            <li><a href="#"><span class="fa fa-twitter"></span></a></li>
-                            <li><a href="#"><span class="fa fa-google-plus"></span></a></li>
-                        </ul>
+                        <!--<ul class="speaker-socials">
+        <li><a href="#"><span class="fa fa-facebook-official"></span></a></li>
+        <li><a href="#"><span class="fa fa-twitter"></span></a></li>
+        <li><a href="#"><span class="fa fa-google-plus"></span></a></li>
+    </ul>-->
                     </div>
                 </div>
             </center>
@@ -464,7 +477,7 @@
 
                 <!-- Navigation by day start -->
                 <div class="nav-wrapper">
-                    <span class="nav-current"><h5 class="highlight">Day 1</h5><p class="text-alt">08/10/2016</p></span><ul class="nav nav-schedule">
+                    <span class="nav-current"><h5 class="highlight"></h5><p class="text-alt">08/10/2016</p></span><ul class="nav nav-schedule">
                         <!--<li class="active"><a href="#day1" data-toggle="tab"><h5 class="highlight">Day 1</h5><p class="text-alt">08/10/2016</p></a></li>
                         <li><a href="#day2" data-toggle="tab"><h5 class="highlight">Day 2</h5><p class="text-alt">09/10/2016</p></a></li>
                         <li><a href="#day3" data-toggle="tab"><h5 class="highlight">Day 3</h5><p class="text-alt">10/10/2016</p></a></li>
@@ -481,7 +494,7 @@
 
                         <!-- Navigation by auditorium start -->
                         <div class="nav-wrapper">
-                            <span class="nav-current">Auditorium 1</span><ul class="nav nav-schedule">
+                            <span class="nav-current"></span><ul class="nav nav-schedule">
                                 <li class="active"><a href="#day1_auditorium1" data-toggle="tab">1399/08/23</a></li>
                                 <li><a href="#day1_auditorium6" data-toggle="tab"></a></li>
                                 <li><a href="#day1_auditorium5" data-toggle="tab"></a></li>
@@ -503,68 +516,47 @@
                                     <!-- Lecture start -->
                                     <div class="panel schedule-item">
                                         <div class="lecture-icon-wrapper">
-                                            <span class="fa fa-cutlery"></span>
+                                            <span class=""></span>
                                         </div>
                                         <a data-toggle="collapse" data-parent="#day1_auditorium1_timeline" href="#day1_auditorium1_time1" class="schedule-item-toggle">
-                                            <strong class="time highlight"><span class="icon icon-office-24"></span>2:20 PM</strong>
-                                            <h6 class="title">برنامه یک<i class="icon icon-arrows-06"></i></h6>
+                                            
+                                            <h6 class="title">محتوای همایش شامل:<i class="icon icon-arrows-06"></i>
+                                            </h6>
                                         </a>
                                         <div id="day1_auditorium1_time1" class="panel-collapse collapse in schedule-item-body">
                                             <article>
-                                                <p class="description">Luctus at accumsan eget ut ante. Cras molestie sollicitudin. Ultricies et eros id quisque auctor. Per mus enim ac lorem integer. Erat netus id. Porta enim quis et elementum amet risus volutpat magna nec ac.</p>
-                                                <strong class="highlight speaker-name">Michael Lambert</strong>
+                                                <p class="description">
+                                                    <ul>
+                                                        <li>
+                                                            دوره های مدیریتی
+                                                        </li>
+                                                        <li>
+                                                            نماهنگ تجلیل از مدیران برتر
+                                                        </li>
+                                                        <li>
+                                                            سخنرانی وزیر مربوطه
+                                                        </li>
+                                                        <li>
+                                                            ضیافت شام
+                                                        </li>
+                                                        <li>
+                                                            برگزاری آیین رونمایی
+                                                        </li>
+                                                    </ul>
+                                                </p>
+                                                <strong class="highlight speaker-name"></strong>
                                             </article>
                                         </div>
                                     </div>
                                     <!-- Lecture end -->
                                     <!-- Lecture start -->
-                                    <div class="panel schedule-item">
-                                        <div class="lecture-icon-wrapper"></div>
-                                        <a data-toggle="collapse" data-parent="#day1_auditorium1_timeline" href="#day1_auditorium1_time2" class="schedule-item-toggle collapsed">
-                                            <strong class="time highlight"><span class="icon icon-office-24"></span>5:40 PM</strong>
-                                            <h6 class="title">برنامه دوم<i class="icon icon-arrows-06"></i></h6>
-                                        </a>
-                                        <div id="day1_auditorium1_time2" class="panel-collapse collapse schedule-item-body">
-                                            <article>
-                                                <p class="description">Wisi id tristique. Aliquam orci vulputate. Turpis tempor erat at dictum pellentesque. Neque facilisis cras. Venenatis vel posuere sodales scelerisque leo vel nec enim. Blandit nullam sodales lectus nulla lorem penatibus sed nec eget eros.</p>
-                                                <strong class="highlight speaker-name">Michael Lambert</strong>
-                                            </article>
-                                        </div>
-                                    </div>
+                                   
                                     <!-- Lecture end -->
                                     <!-- Lecture start -->
-                                    <div class="panel schedule-item">
-                                        <div class="lecture-icon-wrapper">
-                                            <img src="assets/img/speakers/speaker1.jpg" alt="" class="img-responsive">
-                                        </div>
-                                        <a data-toggle="collapse" data-parent="#day1_auditorium1_timeline" href="#day1_auditorium1_time3" class="schedule-item-toggle collapsed">
-                                            <strong class="time highlight"><span class="icon icon-office-24"></span>7:00 PM</strong>
-                                            <h6 class="title">Start your business your eyes around the world<i class="icon icon-arrows-06"></i></h6>
-                                        </a>
-                                        <div id="day1_auditorium1_time3" class="panel-collapse collapse schedule-item-body">
-                                            <article>
-                                                <p class="description">Integer in eu. Quis id curabitur tellus est enim. Ut est ultrices. Vitae ad ut nunc quisquam interdum libero neque magna nonummy sapien sit. In sit lacus. Maecenas molestie fusce ut feugiat vestibulum dui mauris.</p>
-                                                <strong class="highlight speaker-name">Michael Lambert</strong>
-                                            </article>
-                                        </div>
-                                    </div>
+                                   
                                     <!-- Lecture end -->
                                     <!-- Lecture start -->
-                                    <div class="panel schedule-item">
-                                        <div class="lecture-icon-wrapper">
-                                            <img src="assets/img/speakers/speaker1.jpg" alt="" class="img-responsive">
-                                        </div>
-                                        <a data-toggle="collapse" data-parent="#day1_auditorium1_timeline" href="#day1_auditorium1_time4" class="schedule-item-toggle collapsed">
-                                            <strong class="time highlight"><span class="icon icon-office-24"></span>7:40 PM</strong>
-                                            <h6 class="title">Passion and people<i class="icon icon-arrows-06"></i></h6>
-                                        </a>
-                                        <div id="day1_auditorium1_time4" class="panel-collapse collapse schedule-item-body">
-                                            <article>
-                                                <p class="description">Lorem vel lorem. Nulla ab justo. Scelerisque penatibus eget. Nunc ultrices nec sed lobortis et. Vitae massa massa pede magna sociosqu viverra tempus justo. Et quis ornare nisl mi ligula suscipit ullamcorper massa ante diam.</p>
-                                                <strong class="highlight speaker-name">Michael Lambert</strong>
-                                            </article>
-                                        </div>
-                                    </div>
+                                   
                                     <!-- Lecture end -->
 
                                 </div>
@@ -957,7 +949,9 @@
                 <div class="widget about-widget">
                     <h6 class="widget-head" dir="rtl">پیام مدیر عامل <span class="highlight">هلدینگ نگاه</span></h6>
                     <p class="text-alt"><small dir="rtl">
-    اینجانب فهیمه رضوان پناه، به همراه مجموعه ای پویا و خلاق تلاش دارم با نگاهی متفاوت، بستری برای آموزش و رقابت برابر برای تمام فعالیتهای بزرگ و کوچک فراهم آورم. بنده در مسیر خود کاملاً راسخ هستم و به تمام همراهان عزیزم با تمام وجود کمک خواهم کرد.
+    اینجانب فهیمه رضوان پناه مدیرعامل کنسرسیوم نگاه با نگاهی به بلندای ققنوس بر آن هستم که با نگرشی متفاوت و مجموعه ای پویا بستری برای رشد هوشمندانه و رقابت برای تمام فعالیتهای نوین بشری با رویکردی جهانی فراهم آورم که جهانیان بزودی با این سبک نگرش آشنا خواهند شد ، بنده در مسیر خود کاملا راسخ هستم و با تمام وجودم در خدمت خلق می باشم .
+    </br>
+    جهان زمین بازی ما و عشق میراث ماست ...
 </small></p>
 
                     <img src="assets/img/autograph-143x105.png" alt="autograph">
