--- a/Reservation/Views/Home/Index.cshtml
+++ b/Reservation/Views/Home/Index.cshtml
@@ -141,13 +141,13 @@
                         </div>
                         <div class="col-sm-7 align-right">
                             <p>
-                                بزرگ فکر کردن کافی نیست، بزرگی را باید نشان داد
+                                بزرگ فکر کردن کافی نیست، بزرگی را باید نشان داد؛
+                            </p>
+                            <p align="justify">
+                                خلق اثری ماندگار از برند شما هدف نگاه است. اصلی‌ترین دغدغه انسان در طول حیات چندین هزار  ساله خود ما برای باید های زیستی جاودانگی و ماندگاری بوده است. چرا که ماندگاری  در جهت خلق ایده ها و برنامه های  مدیریتی با بهره گیری از دستاوردهای انسان  امروزی که وارث  از پیشینیانمان مان تلقی می گردد،  زمینه ای برای بقای ساختار کاربرد انسان و جامعه میباشد به طوریکه چنان جامعه ای اصالتی دارد که به آن هویت می بخشد و فارغ از دغدغه های زیستی زمینه‌ای برای پایداری در جهت تعالی آدمی با نیازهای ساکنین آن جامعه همسو می گردد. از اینرو همایش افزار نگاه با بهره‌گیری از فن آوری‌های نوین و هوشمندانه با رویکردی آینده نگر و جهانی در ساختار اقتصاد جامعه، فراتر از یک برند در مسیر رساندن مدیران ملی و بومی در شرایط چالش انگیز تحریم و اپیدمی کویید ۱۹ که نقش خود را به عنوان مدیر به نحو احسن ایفا کرده اند و اقتصاد کشور عزیزمان ایران را زنده نگه داشته اند به جهانیان معرفی می کند و ضامن ماندگاری آنها در تاریخ ایران می شود.
                             </p>
                             <p>
-                                خلق اثری ماندگار از برند شما هدف نگاه است. اصلی‌ترین دغدغه انسان در طول حیات چندین هزار ساله خود ما برای باید های زیستی جاودانگی و ماندگاری بوده است. چرا که ماندگاری در جهت خلق ایده ها و برنامه های مدیریتی با بهره گیری از دستاوردهای انسان امروزی که وارث از پیشینیان مان تلقی می گردد، زمینهای برای بقای ساختار کاربرد انسان و جامعه میباشد به طوری که چنان جامعه ای اصالتی دارد که به آن هویت می بخشد و فارغ از دغدغه های زیستی زمینه‌ای برای پایداری در جهت تعالی آدمی با نیازهای ساکنین آن جامعه همسو می گردد. از اینرو همایش افزار نگاه با بهره‌گیری از فناوری‌های نوین و هوشمندانه با رویکردی آینده نگر و جهانی در ساختار اقتصاد جامعه، فراتر از یک برند در مسیر رساندن مدیران ملی و بومی در شرایط چالش انگیز تحریم و اپیدمی کووید ۱۹ که نقش خود را به عنوان مدیر به نحو احسن ایفا کرده اند و اقتصاد کشور عزیزمان ایران را زنده نگه داشته اند به جهانیان معرفی می کند و ضامن ماندگاری آنها در تاریخ ایران می شود.
-                            </p>
-                            <p>
-                                پا به پای هم ایستاده ایم تا خدا و جهانیان برای من کف بزنند و یاریمان کنند...
+                                پا به پای هم ایستاده ایم تا خدا و جهانیان برای مان کف بزنند و یاریمان کنند...
                             </p>
                             <!--<div class="btns-container">
         <a href="#" class="btn btn-md" data-modal-link="about">ادامه مطلب</a>
@@ -174,11 +174,11 @@
                     <div id="horizontal_tab2" class="tab-pane fade active in">
                         <div class="col-sm-7 align-right">
                             <h6>شوالیه مدیران برتر</h6>
-                            <p>
+                            <p align="justify">
                                 همایش سراسری شوالیه مدیران برتر اولین همایش تجلیل از مدیران برتر و نمونه کشوری در سال یک هزار و سیصد و نود و نه با توجه به اوضاع خاص اقتصادی کشور برگزار می‌شود. برآیند فرجامین کوشش همیشگی بشر برای بهبود شرایط زندگی در طول حیات چند هزار ساله جاودانگی و ماندگاری بوده است، معنای که بالاتر از باید های زیستی انسان تولدی از هستی بی نهایت طلبی بشر تلاش برای تجسم بخشیدن به ارزش های معنوی اش در جهت کمال بیان می‌شود و حیات هر جامعه در پاسخگویی به توفیقات در رابطه با همین نیازهاست. از این رو کنسرسیوم نگاه با یک نگاهی بدون حد و مرز و منحصر به فرد مطابق با چارچوب ملی به دنبال خلق ایده با ابعاد وسیع با توجه به نیاز های مادی و معنوی خود و با بهره گیری از یک هدف واحد افق های نوین و و با رویکردی آینده نگر در پی کشف و خلق آن در ساختار جامعه با رهنمودهای مطابق و حوزه‌های مختلف در ارتقای اجرایی سازی در راستای رویکردهای زمینه‌ساز با افق های نگرشی است.
                             </p>
                             <div class="btns-container">
-                                <a href="#" class="btn btn-md" data-modal-link="about">ادامه مطلب</a>
+                                <a href="#" class="btn btn-md" >ادامه مطلب</a>
                             </div>
                         </div>
                         <div class="col-sm-5 img-column">
