--- a/Reservation/Views/Home/Index.cshtml
+++ b/Reservation/Views/Home/Index.cshtml
@@ -143,11 +143,14 @@
                             <p>
                                 بزرگ فکر کردن کافی نیست، بزرگی را باید نشان داد؛
                             </p>
+                            <p>
+                                خلق اثری ماندگار از برند شما هدف نگاه است.
+                            </p>
                             <p align="justify">
-                                خلق اثری ماندگار از برند شما هدف نگاه است. اصلی‌ترین دغدغه انسان در طول حیات چندین هزار  ساله خود ما برای باید های زیستی جاودانگی و ماندگاری بوده است. چرا که ماندگاری  در جهت خلق ایده ها و برنامه های  مدیریتی با بهره گیری از دستاوردهای انسان  امروزی که وارث  از پیشینیانمان مان تلقی می گردد،  زمینه ای برای بقای ساختار کاربرد انسان و جامعه میباشد به طوریکه چنان جامعه ای اصالتی دارد که به آن هویت می بخشد و فارغ از دغدغه های زیستی زمینه‌ای برای پایداری در جهت تعالی آدمی با نیازهای ساکنین آن جامعه همسو می گردد. از اینرو همایش افزار نگاه با بهره‌گیری از فن آوری‌های نوین و هوشمندانه با رویکردی آینده نگر و جهانی در ساختار اقتصاد جامعه، فراتر از یک برند در مسیر رساندن مدیران ملی و بومی در شرایط چالش انگیز تحریم و اپیدمی کویید ۱۹ که نقش خود را به عنوان مدیر به نحو احسن ایفا کرده اند و اقتصاد کشور عزیزمان ایران را زنده نگه داشته اند به جهانیان معرفی می کند و ضامن ماندگاری آنها در تاریخ ایران می شود.
+                                اصلی‌ترین دغدغه انسان در طول حیات چندین هزار  ساله خود ما برای باید های زیستی جاودانگی و ماندگاری بوده است. چرا که ماندگاری  در جهت خلق ایده ها و برنامه های  مدیریتی با بهره گیری از دستاوردهای انسان  امروزی که وارث  از پیشینیانمان مان تلقی می گردد،  زمینه ای برای بقای ساختار کاربرد انسان و جامعه میباشد به طوریکه چنین جامعه ای اصالتی دارد که به آن هویت می بخشد و فارغ از دغدغه های زیستی زمینه‌ای برای پایداری در جهت تعالی آدمی با نیازهای ساکنین آن جامعه همسو می گردد. از اینرو همایش افزار نگاه با بهره‌گیری از فن آوری‌های نوین و هوشمندانه با رویکردی آینده نگر و جهانی در ساختار اقتصاد جامعه، فراتر از یک برند در مسیر رساندن مدیران ملی و بومی در شرایط چالش انگیز تحریم و اپیدمی کویید ۱۹ که نقش خود را به عنوان مدیر به نحو احسن ایفا کرده اند و اقتصاد کشور عزیزمان ایران را زنده نگه داشته اند به جهانیان معرفی می کند و ضامن ماندگاری آنها در تاریخ ایران می شود.
                             </p>
                             <p>
-                                پا به پای هم ایستاده ایم تا خدا و جهانیان برای مان کف بزنند و یاریمان کنند...
+                                پا به پای هم ایستاده ایم تا خدا و جهانیان برایمان کف بزنند و یاریمان کنند...
                             </p>
                             <!--<div class="btns-container">
         <a href="#" class="btn btn-md" data-modal-link="about">ادامه مطلب</a>
