--- a/Reservation/Views/Home/Ticketdetails.cshtml
+++ b/Reservation/Views/Home/Ticketdetails.cshtml
@@ -9,7 +9,7 @@
     <div class="container">
         <h1> جزئیات بلیط طرح  <span id="typeName" class="highlight"></span></h1>
         <br/>
-        <h3> قیمت :   <span id="price" class="highlight"></span> هزار تومان</h3>
+        <h3> قیمت :   <span id="price" class="highlight"></span> میلیون تومان</h3>
     </div>
 </section>
 
