--- a/Reservation/Views/Home/About.cshtml
+++ b/Reservation/Views/Home/About.cshtml
@@ -1,6 +1,6 @@
 ﻿
 @{
-    ViewData["Title"] = "About";
+    ViewData["Title"] = "درباره همایش";
     Layout = "~/Views/Shared/_Layout.cshtml";
 }
 <br />
@@ -15,18 +15,18 @@
                 <br>
             </div>
             <div class="text-right" dir="rtl" style="padding: 5px;">
-                <p>همایش سراسری شوالیه مدیران برتر اولین همایش تجلیل از مدیران برتر و نمونه کشوری در سال یک هزار و سیصد و نود و نه با توجه به اوضاع خاص اقتصادی کشور برگزار می‌شود. برآیند فرجامین کوشش همیشگی بشر برای بهبود شرایط زندگی در طول حیات چند هزار ساله جاودانگی و ماندگاری بوده است، معنای که بالاتر از باید های زیستی انسان تولدی از هستی بی نهایت طلبی بشر تلاش برای تجسم بخشیدن به ارزش های معنوی اش در جهت کمال بیان می‌شود و حیات هر جامعه در پاسخگویی به توفیقات در رابطه با همین نیازهاست. از این رو کنسرسیوم نگاه با یک نگاهی بدون حد و مرز و منحصر به فرد مطابق با چارچوب ملی به دنبال خلق ایده با ابعاد وسیع با توجه به نیاز های مادی و معنوی خود و با بهره گیری از یک هدف واحد افق های نوین و و با رویکردی آینده نگر در پی کشف و خلق آن در ساختار جامعه با رهنمودهای مطابق و حوزه‌های مختلف در ارتقای اجرایی سازی در راستای رویکردهای زمینه‌ساز با افق های نگرشی است. </p>
-                <p>شرکت همایش افزار نگاه با مجموعه‌ای متشکل از ژنرالهای برگزاری همایش های ملی و بین المللی تحت لقای کنسرسیوم نگاه در راستای بررسی و تحقق موارد فوق الذکر در نظر دارد همایش سراسری را تحت عنوان شوالیه مدیران برتر با گرد هم آوردن مدیران برجسته و موفق، صاحب نظران و اندیشمندان، دانشگاهیان، سیاست‌گذاران، سازمان های ذیربط، مهندسین مشاور، متخصصان و علاقمندان به این حوزه به تبیین و اهداف مرتبط با محورهای همایش بپردازد. ماندگاری برند شرکت کننده در همایش در تاریخ کهن این سرزمین، برگزاری دوره های آموزشی مدیریت در همایش، اعطای گواهینامه شرکت در دوره، تجلیل از مدیران برجسته و ایجاد فرصتی مناسب برای تبادل اطلاعات و ساخت کانال های ارتباطی بین مدیران و وزیر مربوطه که عامل پیشرفت و دلگرمی مدیران عزیز می شود،از اهداف این همایش می باشد.</p>
-                <p>نگاه بر آن است که شرکت کننده در این همایش به جای تبلیغات پر هزینه و کم بازده برای پروسه برندینگ خود با استفاده از نگاهی هوشمندانه و روشهای نوین و برندینگ همتای همایش های سراسری، مدیرعامل آن مجموعه را به عنوان شوالیه و برند بیرون نیز به عنوان نشان شوالیه و جهانیان معرفی نماید. نگاه از نشان شما اثری ماندگار خلق می نماید.</p>
+                <p align="justify">همایش سراسری شوالیه مدیران برتر اولین همایش تجلیل از مدیران برتر و نمونه کشوری در سال یک هزار و سیصد و نود و نه با توجه به اوضاع خاص اقتصادی کشور برگزار می‌شود. برآیند فرجامین کوشش همیشگی بشر برای بهبود شرایط زندگی در طول حیات چند هزار ساله جاودانگی و ماندگاری بوده است، معنای که بالاتر از باید های زیستی انسان تولدی از هستی بی نهایت طلبی بشر تلاش برای تجسم بخشیدن به ارزش های معنوی اش در جهت کمال بیان می‌شود و حیات هر جامعه در پاسخگویی به توفیقات در رابطه با همین نیازهاست. از این رو کنسرسیوم نگاه با یک نگاهی بدون حد و مرز و منحصر به فرد مطابق با چارچوب ملی به دنبال خلق ایده با ابعاد وسیع با توجه به نیاز های مادی و معنوی خود و با بهره گیری از یک هدف واحد افق های نوین و و با رویکردی آینده نگر در پی کشف و خلق آن در ساختار جامعه با رهنمودهای مطابق و حوزه‌های مختلف در ارتقای اجرایی سازی در راستای رویکردهای زمینه‌ساز با افق های نگرشی است. </p>
+                <p align="justify">شرکت همایش افزار نگاه با مجموعه‌ای متشکل از ژنرال های برگزاری همایش های ملی و بین المللی تحت لقای کنسرسیوم نگاه در راستای بررسی و تحقق موارد فوق الذکر در نظر دارد همایش سراسری را تحت عنوان شوالیه مدیران برتر با گرد هم آوردن مدیران برجسته و موفق، صاحب نظران و اندیشمندان، دانشگاهیان، سیاست‌گذاران، سازمان های ذیربط، مهندسین مشاور، متخصصان و علاقمندان به این حوزه به تبیین و اهداف مرتبط با محورهای همایش بپردازد. ماندگاری برند شرکت کننده در همایش در تاریخ کهن این سرزمین، برگزاری دوره های آموزشی مدیریت در همایش، اعطای گواهینامه شرکت در دوره، تجلیل از مدیران برجسته و ایجاد فرصتی مناسب برای تبادل اطلاعات و ساخت کانال های ارتباطی بین مدیران و وزیر مربوطه که عامل پیشرفت و دلگرمی مدیران عزیز می شود،از اهداف این همایش می باشد.</p>
+                <p align="justify">نگاه بر آن است که شرکت کننده در این همایش به جای تبلیغات پر هزینه و کم بازده برای پروسه برندینگ خود با استفاده از نگاهی هوشمندانه و روشهای نوین و برندینگ همتای همایش های سراسری، مدیرعامل آن مجموعه را به عنوان شوالیه و برند آن نیز به عنوان نشان شوالیه به جهانیان معرفی نماید.</p>
+                <p>نگاه از نشان شما اثری ماندگار خلق می نماید.</p>
                 <br />
                 <h6><span class="highlight">محورهای همایش:</span></h6>
                 <ul>
-                    <li>•	نقش فناوری های نوین و هوشمند سازی در رابطه با سیستم آموزش</li>
+                    <li>•	نقش فن آوری های نوین و هوشمند سازی در رابطه با سیستم آموزش</li>
                     <li>•	نوآوری و ایجاد خلق خلاقیت و آشنایی با تکنیک های نوین آموزش</li>
                     <li>•	اثربخشی سیستم های سازمان یافته در جهت سازماندهی در مدیریت بحران</li>
                     <li>•	اهمیت و بهره مندی سرمایه گذاری در آموزش در فرآیند رشد و توسعه اقتصادی</li>
                     <li>•	راهکارهای اساسی جهت تسهیل در امور کارآفرینان و تولید در جامعه</li>
-                    <li>•	نقش صنعت و صادرات در بهره مندی و بهره‌وری رشد اقتصاد ملی</li>
                     <li>•	نقش صنعت و صادرات در بهره مندی و بهره‌وری رشد اقتصاد ملی</li>
                     <li>•	بهره گیری از هوش استراتژیک مدیران و ارائه راهبردهای کلان اقتصادی برای خروج از دوران تورمی و پاندمی</li>
                     <li>•	بررسی جایگاه مدیران موفق در حمایت از تولید و خدمات با چشم انداز جدید</li>
@@ -38,20 +38,56 @@
                 <br />
                 <h6><span class="highlight">مزایای همایش:</span></h6>
                 <ul>
-                    <li>•	تجلیل از مدیران برجسته</li>
-                    <li>•	اعطای تندیس</li>
+                    <li>
+                        •	ادواری بودن همایش
+                    </li>
+                    <li>
+                        •	پوشش خبری کامل همایش توسط پایگاه های معتبر خبری
+                    </li>
+                    <li>
+                        •	ارائه گواهینامه حضور برای شرکت کنندگان
+                    </li>
+                    <li>
+                        •	حضور و تعامل سازنده مدیران سراسر کشور
+                    </li>
+                    <li>
+                        •	ارائه گواهینامه حضور در همایش
+                    </li>
+                    <li>
+                        •	امکان ثبت نام بصورت حضوری و غیرحضوری
+                    </li>
+                    <li>
+                        •	اهدای جوائز نفیس به مقالات برتر
+                    </li>
+                    <li>
+                        •	آشنایی با چهره های برتر اقتصادی ملی و بین المللی
+                    </li>
+                    <li>
+                        •	کشف سرویس‌ها و محصولات جدید
+                    </li>
+                    <li>
+                        •	تثبیت موقعیت خود به عنوان یک متخصص
+                    </li>
+                    <li>
+                        •	نتورکینگ یا شبکه‌ سازی با هم ‌صنف ‌های خود
+                    </li>
+                    <li>
+                        •	فرصت ‌های آموزشی
+                    </li>
+
+
                 </ul>
                 <br />
                 <h6><span class="highlight">اهداف همایش</span></h6>
                 <h6 class="h7"> اهداف جزئی:</h6>
                 <ul>
-                    <li>•	آشنایی با جدیدترین نگاه‌ها به بلندای ققنوس با مفاهیم فناوری های نوین</li>
-                    <li>•	شناسایی سازمانهای ارائه خدمات دانش محور</li>
+                    <li>•	آشنایی با جدیدترین نگاه‌ها به بلندای ققنوس با مفاهیم فن آوری های نوین</li>
+                    <li>•	شناسایی سازمان های ارائه خدمات دانش محور</li>
                     <li>•	راهکارهای راهبردی در بهره وری از پژوهش‌های کاربردی</li>
                     <li>•	معرفی دستاوردها و توانمندی های نوین در کشور</li>
                     <li>•	ارتباط با مدیران و انگیزه های نسل جدید در جهت شکوفایی</li>
                     <li>•	بررسی چالش ها در حوزه های گوناگون</li>
-                    <li>•	زمینه سازی در راستای تشویق و ترغیب به افراد فعال در رویارویی فناوری های نوین</li>
+                    <li>•	زمینه سازی در راستای تشویق و ترغیب به افراد فعال در رویارویی فن آوری های نوین</li>
                     <li>•	برقراری ارتباط گسترده بین نهادهای علمی و اجرایی در جهت تحقق و تبیین محورهای همایش</li>
 
                 </ul>
@@ -59,7 +95,7 @@
                 <h6 class="h7"> اهداف کلی:</h6>
                 <ul>
                     <li>•	بررسی اثرات متقابل بخش های مختلف سیستم جامع مدیریت در سایر بخش ها</li>
-                    <li>•	ترغیب و به کارگیری بخش خصوصی به استفاده از فناوری‌های نوین در امر توسعه پایدار</li>
+                    <li>•	ترغیب و به کارگیری بخش خصوصی به استفاده از فن آوری‌های نوین در امر توسعه پایدار</li>
                     <li>•	آفرینش بستر مناسب برای انتقال دانش به سایر کشورها در راستای پیشرفت و تکنولوژی</li>
                     <li>•	توسعه و ترویج فرهنگ برای نسل آینده در جهت هویت</li>
                     <li>•	شناخت و تبیین شاخص های هویتی در جهت هویت سازی</li>
@@ -75,6 +111,7 @@
                             font-family: mellatweb-isans !important;
                             text-align: center !important;
                             vertical-align: middle;
+                            width:80%;
                         }
 
                             .tg td {
@@ -141,7 +178,7 @@
                             </tr>
                             <tr>
                                 <td class="tg-baqh" rowspan="4"></td>
-                                <td class="tg-baqh" rowspan="4"><img src="/assets/img/clip_image001.png"></td>
+                                <td class="tg-baqh" rowspan="4" style="vertical-align:middle"><img src="/assets/img/clip_image001.png"></td>
                                 <td class="tg-baqh">روحیه</td>
                             </tr>
                             <tr>
