--- a/Reservation/wwwroot/assets/css/style.css
+++ b/Reservation/wwwroot/assets/css/style.css
@@ -2928,7 +2928,7 @@ input[type=password].error,
 .header .buy-btn:active,
 .header .buy-btn.hovered,
 .header .buy-btn.pressed {
-    border-color: #fe4918;
+    border-color: #5f1216;
 }
 
     .base-clr-bg,
@@ -2964,7 +2964,7 @@ input[type=password].error,
     .navbar-toggle .icon-bar,
     .thumb-wrapper .overlay:before,
     .header .buy-btn {
-        background-color: #fe4918;
+        background-color: #5f1216;
         font-family: mellatweb-isans !important;
     }
 
@@ -3037,7 +3037,7 @@ input[type=password].error,
         .header.header-color .navigation-header .buy-btn.pressed,
         input.header.header-color .navigation-header .buy-btn,
         .header .buy-btn {
-            color: #fe4918;
+            color: #5f1216;
         }
 
 ::selection {
@@ -3184,7 +3184,7 @@ li {
         left: 0;
         bottom: 0;
         content: "";
-        background-color: #262627;
+        background-color: #585858;
         z-index: -1;
     }
 
@@ -3505,7 +3505,7 @@ li {
             }
 
             .style-switcher .template-set-color .color.orange {
-                background-color: #fe4918;
+                background-color: #5f1216;
             }
 
     .style-switcher .template-animations-switch input[type="checkbox"] {
@@ -5156,7 +5156,7 @@ button.btn.btn-block {
                 .schedule .tab-content .nav.nav-schedule > li.active > a:focus,
                 .tabs-vertical .nav.nav-tabs > li.active > a:focus {
                     background-color: inherit;
-                    color: #fe4918;
+                    color: #5f1216;
                     border: none;
                     opacity: 1;
                 }
@@ -6768,9 +6768,9 @@ button[type="submit"] .loading {
     }
 
     .gallery-thumb-link:active:after {
-        -webkit-box-shadow: 0 0 30px 4px #fe4918;
-        -moz-box-shadow: 0 0 30px 4px #fe4918;
-        box-shadow: 0 0 30px 4px #fe4918;
+        -webkit-box-shadow: 0 0 30px 4px #5f1216;
+        -moz-box-shadow: 0 0 30px 4px #5f1216;
+        box-shadow: 0 0 30px 4px #5f1216;
     }
 
     .gallery-thumb-link:before {
@@ -7861,7 +7861,7 @@ button[type="submit"] .loading {
         .header.header-color .navbar-collapse .buy-btn:active,
         .header.header-color .navbar-collapse .buy-btn.hovered,
         .header.header-color .navbar-collapse .buy-btn.pressed {
-            color: #fe4918;
+            color: #5f1216;
             background-color: #ffffff;
         }
 }
