--- a/Reservation/Views/Home/Index.cshtml
+++ b/Reservation/Views/Home/Index.cshtml
@@ -48,11 +48,11 @@
 
                 <div class="col-sm-5 col-xs-12 navigation-header" style="padding: 0;">
                     <p>
-                        </br></br></br></br>
+                        <br /><br /><br /><br />
                         <h5 class="heading-alt" style="margin-bottom: 8px; vertical-align:middle">
                             بیست و سوم آبان 1399
                             <span class="fa fa-map-marker base-clr-txt" style="margin-left: 14px;"></span>
-                            </br>
+                            <br />
                             تهران- سالن همایش های بین المللی صدا و سیما
                             <span class="fa fa-calendar-o base-clr-txt"></span>
                         </h5>
@@ -70,7 +70,7 @@
                 <a href="#" class="btn btn-outline btn-md" data-modal-link="0">ویدیو</a>
             </div>
 
-
+        </div>
     </section>
 
     <header class="header header-black fixed" style="min-height: 100px;">
@@ -90,7 +90,7 @@
                 <div class="col-sm-10 col-xs-12 navigation-container" style=" float: right;">
                     <div id="navigation" class="navbar-collapse collapse" style="max-height: 669px;">
                         <ul class="navigation-list pull-left light-text">
-                            
+
                             <li class="navigation-item"><a href="#contacts" class="navigation-link">تماس با ما</a></li>
                             <li class="navigation-item"><a href="#speakers" class="navigation-link">سخنرانان</a></li>
                             <li class="navigation-item"><a href="#schedule" class="navigation-link">برنامه ها</a></li>
@@ -99,26 +99,26 @@
                             <li class="navigation-item"><a href="#sponsors" class="navigation-link">اسپانسرها</a></li>
 
                             @*<li class="navigation-item dropdown">
-            <a class="navigation-link dropdown-toggle" data-toggle="dropdown">Elements</a>
-            <ul class="dropdown-menu" style="max-height: 770px;">
-                <li class="navigation-item"><a href="elements/contacts.html" class="navigation-link">Advanced Maps</a></li>
-                <li class="navigation-item"><a href="elements/buttons.html" class="navigation-link">Buttons</a></li>
-                <li class="navigation-item"><a href="elements/content.html" class="navigation-link">Content</a></li>
-                <li class="navigation-item"><a href="elements/counters.html" class="navigation-link">Counters</a></li>
-                <li class="navigation-item"><a href="elements/countdown.html" class="navigation-link">Countdown</a></li>
-                <li class="navigation-item"><a href="elements/call_to_action.html" class="navigation-link">Call to action</a></li>
-                <li class="navigation-item"><a href="elements/gallery.html" class="navigation-link">Gallery</a></li>
-                <li class="navigation-item"><a href="elements/navigations.html" class="navigation-link">Navigation</a></li>
-                <li class="navigation-item"><a href="elements/pricing.html" class="navigation-link">Prices</a></li>
-                <li class="navigation-item"><a href="elements/schedule.html" class="navigation-link">Schedule</a></li>
-                <li class="navigation-item"><a href="ho/speakers.html" class="navigation-link">Speakers</a></li>
-                <li class="navigation-item"><a href="elements/tabs.html" class="navigation-link">Tabs</a></li>
-                <li class="navigation-item"><a href="elements/tables.html" class="navigation-link">Tables</a></li>
-                <li class="navigation-item"><a href="elements/testimonials.html" class="navigation-link">Testimonials</a></li>
-                <li class="navigation-item"><a href="elements/typography.html" class="navigation-link">Typography</a></li>
-                <li class="navigation-item"><a href="elements/sponsors.html" class="navigation-link">Sponsors</a></li>
-            </ul>
-        </li>*@
+                                    <a class="navigation-link dropdown-toggle" data-toggle="dropdown">Elements</a>
+                                    <ul class="dropdown-menu" style="max-height: 770px;">
+                                        <li class="navigation-item"><a href="elements/contacts.html" class="navigation-link">Advanced Maps</a></li>
+                                        <li class="navigation-item"><a href="elements/buttons.html" class="navigation-link">Buttons</a></li>
+                                        <li class="navigation-item"><a href="elements/content.html" class="navigation-link">Content</a></li>
+                                        <li class="navigation-item"><a href="elements/counters.html" class="navigation-link">Counters</a></li>
+                                        <li class="navigation-item"><a href="elements/countdown.html" class="navigation-link">Countdown</a></li>
+                                        <li class="navigation-item"><a href="elements/call_to_action.html" class="navigation-link">Call to action</a></li>
+                                        <li class="navigation-item"><a href="elements/gallery.html" class="navigation-link">Gallery</a></li>
+                                        <li class="navigation-item"><a href="elements/navigations.html" class="navigation-link">Navigation</a></li>
+                                        <li class="navigation-item"><a href="elements/pricing.html" class="navigation-link">Prices</a></li>
+                                        <li class="navigation-item"><a href="elements/schedule.html" class="navigation-link">Schedule</a></li>
+                                        <li class="navigation-item"><a href="ho/speakers.html" class="navigation-link">Speakers</a></li>
+                                        <li class="navigation-item"><a href="elements/tabs.html" class="navigation-link">Tabs</a></li>
+                                        <li class="navigation-item"><a href="elements/tables.html" class="navigation-link">Tables</a></li>
+                                        <li class="navigation-item"><a href="elements/testimonials.html" class="navigation-link">Testimonials</a></li>
+                                        <li class="navigation-item"><a href="elements/typography.html" class="navigation-link">Typography</a></li>
+                                        <li class="navigation-item"><a href="elements/sponsors.html" class="navigation-link">Sponsors</a></li>
+                                    </ul>
+                                </li>*@
                         </ul>
 
                         @*<a href="#" class="pull-right buy-btn">Buy Tickets</a>*@
@@ -1015,7 +1015,7 @@
                             <li class="socials-nav-item"><a href="https://www.youtube.com/negah_event"><span class="fa fa-youtube"></span></a></li>
                             <li class="socials-nav-item"><a href="https://www.instagram.com/negah_event"><span class="fa fa-instagram"></span></a></li>
                         </ul>
-                        <p class="text-alt"><small>تمام حقوق این سایت متعلق به هلدینگ نگاه میباشد.©</small></p>
+                        <p class="text-alt"><small>تمام حقوق این سایت متعلق به کنسرسیوم نگاه میباشد.©</small></p>
                     </div>
 
                 </div>
