--- a/Reservation/Views/Shared/_Layout.cshtml
+++ b/Reservation/Views/Shared/_Layout.cshtml
@@ -42,6 +42,7 @@
                     <div id="navigation" class="navbar-collapse collapse" style="max-height: 669px;">
                         <ul class="navigation-list pull-left light-text">
                             <li class="navigation-item"><a href="#contacts" class="navigation-link">تماس با ما</a></li>
+                            <li class="navigation-item"><a href="/Downloads/Catalog.pdf" target="_blank" class="navigation-link">دانلود کاتالوگ</a></li>
                             <li class="navigation-item"><a href="#speakers" class="navigation-link">سخنرانان</a></li>
                             <li class="navigation-item"><a href="#schedule" class="navigation-link">زمانبندی</a></li>
                             <li class="navigation-item"><a href="#prices" class="navigation-link">قیمت ها</a></li>
@@ -49,26 +50,26 @@
                             <li class="navigation-item"><a href="#sponsors" class="navigation-link">اسپانسرها</a></li>
 
                             @*<li class="navigation-item dropdown">
-                                    <a class="navigation-link dropdown-toggle" data-toggle="dropdown">Elements</a>
-                                    <ul class="dropdown-menu" style="max-height: 770px;">
-                                        <li class="navigation-item"><a href="elements/contacts.html" class="navigation-link">Advanced Maps</a></li>
-                                        <li class="navigation-item"><a href="elements/buttons.html" class="navigation-link">Buttons</a></li>
-                                        <li class="navigation-item"><a href="elements/content.html" class="navigation-link">Content</a></li>
-                                        <li class="navigation-item"><a href="elements/counters.html" class="navigation-link">Counters</a></li>
-                                        <li class="navigation-item"><a href="elements/countdown.html" class="navigation-link">Countdown</a></li>
-                                        <li class="navigation-item"><a href="elements/call_to_action.html" class="navigation-link">Call to action</a></li>
-                                        <li class="navigation-item"><a href="elements/gallery.html" class="navigation-link">Gallery</a></li>
-                                        <li class="navigation-item"><a href="elements/navigations.html" class="navigation-link">Navigation</a></li>
-                                        <li class="navigation-item"><a href="elements/pricing.html" class="navigation-link">Prices</a></li>
-                                        <li class="navigation-item"><a href="elements/schedule.html" class="navigation-link">Schedule</a></li>
-                                        <li class="navigation-item"><a href="ho/speakers.html" class="navigation-link">Speakers</a></li>
-                                        <li class="navigation-item"><a href="elements/tabs.html" class="navigation-link">Tabs</a></li>
-                                        <li class="navigation-item"><a href="elements/tables.html" class="navigation-link">Tables</a></li>
-                                        <li class="navigation-item"><a href="elements/testimonials.html" class="navigation-link">Testimonials</a></li>
-                                        <li class="navigation-item"><a href="elements/typography.html" class="navigation-link">Typography</a></li>
-                                        <li class="navigation-item"><a href="elements/sponsors.html" class="navigation-link">Sponsors</a></li>
-                                    </ul>
-                                </li>*@
+            <a class="navigation-link dropdown-toggle" data-toggle="dropdown">Elements</a>
+            <ul class="dropdown-menu" style="max-height: 770px;">
+                <li class="navigation-item"><a href="elements/contacts.html" class="navigation-link">Advanced Maps</a></li>
+                <li class="navigation-item"><a href="elements/buttons.html" class="navigation-link">Buttons</a></li>
+                <li class="navigation-item"><a href="elements/content.html" class="navigation-link">Content</a></li>
+                <li class="navigation-item"><a href="elements/counters.html" class="navigation-link">Counters</a></li>
+                <li class="navigation-item"><a href="elements/countdown.html" class="navigation-link">Countdown</a></li>
+                <li class="navigation-item"><a href="elements/call_to_action.html" class="navigation-link">Call to action</a></li>
+                <li class="navigation-item"><a href="elements/gallery.html" class="navigation-link">Gallery</a></li>
+                <li class="navigation-item"><a href="elements/navigations.html" class="navigation-link">Navigation</a></li>
+                <li class="navigation-item"><a href="elements/pricing.html" class="navigation-link">Prices</a></li>
+                <li class="navigation-item"><a href="elements/schedule.html" class="navigation-link">Schedule</a></li>
+                <li class="navigation-item"><a href="ho/speakers.html" class="navigation-link">Speakers</a></li>
+                <li class="navigation-item"><a href="elements/tabs.html" class="navigation-link">Tabs</a></li>
+                <li class="navigation-item"><a href="elements/tables.html" class="navigation-link">Tables</a></li>
+                <li class="navigation-item"><a href="elements/testimonials.html" class="navigation-link">Testimonials</a></li>
+                <li class="navigation-item"><a href="elements/typography.html" class="navigation-link">Typography</a></li>
+                <li class="navigation-item"><a href="elements/sponsors.html" class="navigation-link">Sponsors</a></li>
+            </ul>
+        </li>*@
                         </ul>
 
                         @*<a href="#" class="pull-right buy-btn">Buy Tickets</a>*@
