--- a/Reservation/Views/Home/Index.cshtml
+++ b/Reservation/Views/Home/Index.cshtml
@@ -139,7 +139,7 @@
                 <div class="tab-content">
                     <div id="horizontal_tab2" class="tab-pane fade active in">
                         <div class="col-sm-5 img-column">
-                            <img src="assets/img/negahLogo.png" alt="" class="img-responsive">
+                            <img src="assets/img/negahLogo.jpg" alt="" class="img-responsive">
                         </div>
                         <div class="col-sm-7 align-right">
                             <p>
@@ -149,7 +149,7 @@
                                 خلق اثری ماندگار از برند شما هدف نگاه است
                             </p>
                             <p align="justify">
-                                اصلی‌ترین دغدغه انسان در طول حیات چندین هزار  ساله خود ما برای باید های زیستی جاودانگی و ماندگاری بوده است. چرا که ماندگاری  در جهت خلق ایده ها و برنامه های  مدیریتی با بهره گیری از دستاوردهای انسان  امروزی که وارث  از پیشینیانمان تلقی می گردد،  زمینه ای برای بقای ساختار کاربرد انسان و جامعه می باشد به طوریکه چنین جامعه ای اصالتی دارد که به آن هویت می بخشد و فارغ از دغدغه های زیستی زمینه‌ای برای پایداری در جهت تعالی آدمی با نیازهای ساکنین آن جامعه همسو می گردد. از اینرو همایش افزار نگاه با بهره‌گیری از فن آوری‌های نوین و هوشمندانه با رویکردی آینده نگر و جهانی در ساختار اقتصاد جامعه، فراتر از یک برند در مسیر رساندن مدیران ملی و بومی در شرایط چالش انگیز تحریم و اپیدمی کویید ۱۹ که نقش خود را به عنوان مدیر به نحو احسن ایفا کرده اند و اقتصاد کشور عزیزمان ایران را زنده نگه داشته اند به جهانیان معرفی می کند و ضامن ماندگاری آنها در تاریخ ایران می شود.
+                                اصلی‌ترین دغدغه انسان در طول حیات چندین هزار  ساله خود ما برای باید های زیستی جاودانگی و ماندگاری بوده است. چرا که ماندگاری  در جهت خلق ایده ها و برنامه های  مدیریتی با بهره گیری از دستاوردهای انسان  امروزی که وارث  از پیشینیانمان تلقی می گردد،  زمینه ای برای بقای ساختار کاربرد انسان و جامعه می باشد به طوریکه چنین جامعه ای اصالتی دارد که به آن هویت می بخشد و فارغ از دغدغه های زیستی زمینه‌ای برای پایداری در جهت تعالی آدمی با نیازهای ساکنین آن جامعه همسو می گردد. از این رو همایش افزار نگاه با بهره‌گیری از فن آوری‌های نوین و هوشمندانه با رویکردی  آینده نگر و جهانی در ساختار اقتصاد جامعه، فراتر از یک برند در مسیر رساندن مدیران ملی و بومی در شرایط  چالش انگیز تحریم و  اپیدمی کویید ۱۹ که نقش خـــود را به عنوان مدیر به نحو احسن ایفا کرده اند و اقتصاد کشور عزیزمان ایران را زنده نگه داشته اند به جهانیان معرفی می کند و ضامن ماندگاری آنها در تاریخ ایران می شود.
                             </p>
                             <p>
                                 پا به پای هم ایستاده ایم تا خدا و جهانیان برایمان کف بزنند و یاریمان کنند...
@@ -466,7 +466,7 @@
                                             <a data-toggle="collapse" data-parent="#day1_auditorium1_timeline" href="#day1_auditorium1_time1" class="schedule-item-toggle">
 
                                                 <h6 class="title">
-                                                    محتوای همایش شامل:<i class="icon icon-arrows-06"></i>
+                                                    محتوای همایش:<i class="icon icon-arrows-06"></i>
                                                 </h6>
                                             </a>
                                             <div id="day1_auditorium1_time1" class="panel-collapse collapse in schedule-item-body">
