--- a/Reservation/Views/Home/Index.cshtml
+++ b/Reservation/Views/Home/Index.cshtml
@@ -466,7 +466,7 @@
                                             <a data-toggle="collapse" data-parent="#day1_auditorium1_timeline" href="#day1_auditorium1_time1" class="schedule-item-toggle">
 
                                                 <h6 class="title">
-                                                    محتوای همایش:<i class="icon icon-arrows-06"></i>
+                                                    محتوای همایش<i class="icon icon-arrows-06"></i>
                                                 </h6>
                                             </a>
                                             <div id="day1_auditorium1_time1" class="panel-collapse collapse in schedule-item-body">
