--- a/Reservation/Views/Home/Index.cshtml
+++ b/Reservation/Views/Home/Index.cshtml
@@ -67,7 +67,7 @@
             </div>
             <div class="btns-container">
                 <a href="#prices" class="btn btn-md">خرید بلیط</a>
-                <a href="#" class="btn btn-outline btn-md" data-modal-link="0">ویدیو</a>
+                <a href="#" class="btn btn-outline btn-md" data-modal-link="Video-Modal">ویدیو</a>
             </div>
 
         </div>
@@ -963,54 +963,22 @@
         </div>
     </section>
 
-    <div class="modal-window" data-modal="email-ticket" style="background-color: rgba(2, 2, 2, 0.85);">
+    <div class="modal-window" data-modal="Video-Modal" style="background-color: rgba(2, 2, 2, 0.85);">
         <div class="modal-box small animated" data-animation="zoomIn" data-duration="700" style="opacity: 1;">
             <span class="close-btn icon icon-office-52"></span>
 
             <h5 class="align-center"><span class="highlight">نام نویسی</span></h5>
 
+            <div class="col-lg-12 col-md-12 col-sm-12">
+                <div align="center" class="embed-responsive embed-responsive-16by9">
+                    <video  id="Video" src="/Downloads/Cavalier Rises.mp4" autoplay loop class="embed-responsive-item" controls>
+                        <source src="/video/video.mp4" type="video/mp4" />
+                        <source src="/video/video.ogv" type="video/ogg" />
+                        <source src="/video/video.webm" type="video/webm" />
+                    </video>
+                </div>
+            </div>
 
-
-            <fieldset class="col-sm-12">
-                <label style="float: right" for="first_name">نام</label>
-                <input id="first_name" name="first_name" type="text">
-            </fieldset>
-
-            <fieldset class="col-sm-12">
-                <label style="float: right" for="last_name">نام خانوادگی</label>
-                <input id="last_name" name="last_name" type="text">
-            </fieldset>
-
-            <fieldset class="col-sm-12">
-                <label style="float: right" for="email">Email</label>
-                <input id="email" name="email" type="email">
-            </fieldset>
-            <fieldset class="col-sm-12">
-                <label style="float: right" for="email">موبایل</label>
-                <input id="mobile" name="mobile" type="tel">
-            </fieldset>
-            <fieldset class="col-sm-12">
-                <label style="float: right" for="email">کدملی</label>
-                <input id="NationalCode" name="NationalCode" type="text">
-            </fieldset>
-
-            <fieldset class="col-sm-12">
-                <label style="float: right" for="pass1">نوع بلیط</label>
-                <select style="float: right" id="Cmbtikcet">
-                    <option style="float: right" value="1">طلایی</option>
-                    <option style="float: right" value="2">نقره ای</option>
-                    <option style="float: right" value="3">برنزی</option>
-                </select>
-            </fieldset>
-
-
-            @*<fieldset class="col-sm-12">
-                    <input id="privacy" name="privacy" type="checkbox"><label for="privacy">I read &amp; agree with <a href="#">Terms of service</a> </label>
-                    <br>
-                    <br>
-                </fieldset>*@
-
-            <input type="button" id="BuyTicket" value="خرید بلیط" class="btn">
 
 
         </div>
