--- a/Reservation/Views/Home/Index.cshtml
+++ b/Reservation/Views/Home/Index.cshtml
@@ -21,8 +21,8 @@
 
 
     @*<script type="text/javascript" charset="UTF-8" src="https://maps.googleapis.com/maps-api-v3/api/js/41/8/common.js"></script>
-    <script type="text/javascript" charset="UTF-8" src="https://maps.googleapis.com/maps-api-v3/api/js/41/8/util.js"></script>
-    <script type="text/javascript" charset="UTF-8" src="https://maps.googleapis.com/maps-api-v3/api/js/41/8/geocoder.js"></script>*@
+        <script type="text/javascript" charset="UTF-8" src="https://maps.googleapis.com/maps-api-v3/api/js/41/8/util.js"></script>
+        <script type="text/javascript" charset="UTF-8" src="https://maps.googleapis.com/maps-api-v3/api/js/41/8/geocoder.js"></script>*@
 </head>
 
 <body>
@@ -100,26 +100,26 @@
                             <li class="navigation-item"><a href="#sponsors" class="navigation-link">اسپانسرها</a></li>
 
                             @*<li class="navigation-item dropdown">
-            <a class="navigation-link dropdown-toggle" data-toggle="dropdown">Elements</a>
-            <ul class="dropdown-menu" style="max-height: 770px;">
-                <li class="navigation-item"><a href="elements/contacts.html" class="navigation-link">Advanced Maps</a></li>
-                <li class="navigation-item"><a href="elements/buttons.html" class="navigation-link">Buttons</a></li>
-                <li class="navigation-item"><a href="elements/content.html" class="navigation-link">Content</a></li>
-                <li class="navigation-item"><a href="elements/counters.html" class="navigation-link">Counters</a></li>
-                <li class="navigation-item"><a href="elements/countdown.html" class="navigation-link">Countdown</a></li>
-                <li class="navigation-item"><a href="elements/call_to_action.html" class="navigation-link">Call to action</a></li>
-                <li class="navigation-item"><a href="elements/gallery.html" class="navigation-link">Gallery</a></li>
-                <li class="navigation-item"><a href="elements/navigations.html" class="navigation-link">Navigation</a></li>
-                <li class="navigation-item"><a href="elements/pricing.html" class="navigation-link">Prices</a></li>
-                <li class="navigation-item"><a href="elements/schedule.html" class="navigation-link">Schedule</a></li>
-                <li class="navigation-item"><a href="ho/speakers.html" class="navigation-link">Speakers</a></li>
-                <li class="navigation-item"><a href="elements/tabs.html" class="navigation-link">Tabs</a></li>
-                <li class="navigation-item"><a href="elements/tables.html" class="navigation-link">Tables</a></li>
-                <li class="navigation-item"><a href="elements/testimonials.html" class="navigation-link">Testimonials</a></li>
-                <li class="navigation-item"><a href="elements/typography.html" class="navigation-link">Typography</a></li>
-                <li class="navigation-item"><a href="elements/sponsors.html" class="navigation-link">Sponsors</a></li>
-            </ul>
-        </li>*@
+                                    <a class="navigation-link dropdown-toggle" data-toggle="dropdown">Elements</a>
+                                    <ul class="dropdown-menu" style="max-height: 770px;">
+                                        <li class="navigation-item"><a href="elements/contacts.html" class="navigation-link">Advanced Maps</a></li>
+                                        <li class="navigation-item"><a href="elements/buttons.html" class="navigation-link">Buttons</a></li>
+                                        <li class="navigation-item"><a href="elements/content.html" class="navigation-link">Content</a></li>
+                                        <li class="navigation-item"><a href="elements/counters.html" class="navigation-link">Counters</a></li>
+                                        <li class="navigation-item"><a href="elements/countdown.html" class="navigation-link">Countdown</a></li>
+                                        <li class="navigation-item"><a href="elements/call_to_action.html" class="navigation-link">Call to action</a></li>
+                                        <li class="navigation-item"><a href="elements/gallery.html" class="navigation-link">Gallery</a></li>
+                                        <li class="navigation-item"><a href="elements/navigations.html" class="navigation-link">Navigation</a></li>
+                                        <li class="navigation-item"><a href="elements/pricing.html" class="navigation-link">Prices</a></li>
+                                        <li class="navigation-item"><a href="elements/schedule.html" class="navigation-link">Schedule</a></li>
+                                        <li class="navigation-item"><a href="ho/speakers.html" class="navigation-link">Speakers</a></li>
+                                        <li class="navigation-item"><a href="elements/tabs.html" class="navigation-link">Tabs</a></li>
+                                        <li class="navigation-item"><a href="elements/tables.html" class="navigation-link">Tables</a></li>
+                                        <li class="navigation-item"><a href="elements/testimonials.html" class="navigation-link">Testimonials</a></li>
+                                        <li class="navigation-item"><a href="elements/typography.html" class="navigation-link">Typography</a></li>
+                                        <li class="navigation-item"><a href="elements/sponsors.html" class="navigation-link">Sponsors</a></li>
+                                    </ul>
+                                </li>*@
                         </ul>
 
                         @*<a href="#" class="pull-right buy-btn">Buy Tickets</a>*@
@@ -964,22 +964,22 @@
     </section>
 
     <div class="modal-window" data-modal="Video-Modal" style="background-color: rgba(2, 2, 2, 0.85);">
-        <div class="modal-box small animated" data-animation="zoomIn" data-duration="700" style="opacity: 1;">
+        <div class="modal-box animated" data-animation="zoomIn" data-duration="700" style="opacity: 1;width: 75%">
             <span class="close-btn icon icon-office-52"></span>
+            @*<div class="container">*@
+                <div class="row">
+                    <div class="col-lg-12 col-md-12 col-sm-12">
+                        <div align="center" class="embed-responsive embed-responsive-16by9">
+                            <video id="Video" src="/Downloads/CavalierRises.mp4" autoplay loop class="embed-responsive-item" controls style="width: 100% !important">
+                                <source src="/video/video.mp4" type="video/mp4" />
+                                <source src="/video/video.ogv" type="video/ogg" />
+                                <source src="/video/video.webm" type="video/webm" />
+                            </video>
+                        </div>
+                    </div>
 
-            <h5 class="align-center"><span class="highlight">نام نویسی</span></h5>
-
-            <div class="col-lg-12 col-md-12 col-sm-12">
-                <div align="center" class="embed-responsive embed-responsive-16by9">
-                    <video  id="Video" src="/Downloads/Cavalier Rises.mp4" autoplay loop class="embed-responsive-item" controls>
-                        <source src="/video/video.mp4" type="video/mp4" />
-                        <source src="/video/video.ogv" type="video/ogg" />
-                        <source src="/video/video.webm" type="video/webm" />
-                    </video>
                 </div>
-            </div>
-
-
+            @*</div>*@
 
         </div>
     </div>
