--- a/Reservation/Views/Home/Index.cshtml
+++ b/Reservation/Views/Home/Index.cshtml
@@ -67,7 +67,7 @@
             </div>
             <div class="btns-container">
                 <a href="#prices" class="btn btn-md">خرید بلیط</a>
-                <a href="#" class="btn btn-outline btn-md" data-modal-link="Video-Modal">ویدیو</a>
+                <a href="#" class="btn btn-outline btn-md"  onclick="$('#Video').attr('src', '/Downloads/CavalierRises.mp4');" data-modal-link="Video-Modal">ویدیو</a>
             </div>
 
         </div>
@@ -965,12 +965,12 @@
 
     <div class="modal-window" data-modal="Video-Modal" style="background-color: rgba(2, 2, 2, 0.85);">
         <div class="modal-box animated" data-animation="zoomIn" data-duration="700" style="opacity: 1;width: 75%">
-            <span class="close-btn icon icon-office-52"></span>
+            <span class="close-btn icon icon-office-52" onclick="$('#Video').attr('src', '');"></span>
             @*<div class="container">*@
                 <div class="row">
                     <div class="col-lg-12 col-md-12 col-sm-12">
                         <div align="center" class="embed-responsive embed-responsive-16by9">
-                            <video id="Video" src="/Downloads/CavalierRises.mp4" autoplay loop class="embed-responsive-item" controls style="width: 100% !important">
+                            <video id="Video" autoplay    class="embed-responsive-item" controls style="width: 100% !important">
                                 <source src="/video/video.mp4" type="video/mp4" />
                                 <source src="/video/video.ogv" type="video/ogg" />
                                 <source src="/video/video.webm" type="video/webm" />
