--- a/Reservation/Views/Home/VerifyPayment.cshtml
+++ b/Reservation/Views/Home/VerifyPayment.cshtml
@@ -1,13 +1,13 @@
 ﻿
 @{
-    ViewData["Title"] = "خرید بلیط";
+    ViewData["Title"] = "خرید پکیج";
     Layout = "~/Views/Shared/_Layout.cshtml";
 }
 
 
 <section class="section align-center">
     <div class="container">
-        <h3 class="heading-alt">خرید بلیط</h3>
+        <h3 class="heading-alt">خرید پکیج</h3>
     </div>
 </section>
 
@@ -22,7 +22,7 @@
                 <div id="successpayment" style="display: none;">
                     <img src="/assets/img/SuccessPay.png" style="width: 150px; height: 150px">
                     <h1> پرداخت <span class="highlight">موفق</span></h1>
-                    <h3> شماره بلیط :  <span class="highlight" id="ticketNo"></span></h3>
+                    <h3> شماره پکیج :  <span class="highlight" id="ticketNo"></span></h3>
                 </div>
                 <div id="failurepayment" style="display: none;">
                     <img src="/assets/img/ErrorPay.png" style="width: 150px; height: 150px">
