--- a/Reservation/Views/Home/Index.cshtml
+++ b/Reservation/Views/Home/Index.cshtml
@@ -66,8 +66,9 @@
 
             </div>
             <div class="btns-container">
-                <a href="#prices" class="btn btn-md">خرید بلیط</a>
-                <a href="#" class="btn btn-outline btn-md"  onclick="$('#Video').attr('src', '/Downloads/CavalierRises.mp4');" data-modal-link="Video-Modal">ویدیو</a>
+                <a href="#prices" class="btn btn-md">خرید پکیج</a>
+                <a href="#" class="btn btn-outline btn-md" onclick="$('#Video1').attr('src', '/Downloads/CavalierRises.mp4');" data-modal-link="Video-Modal1">ویدیو</a>
+
             </div>
 
         </div>
@@ -95,7 +96,7 @@
 
                             <li class="navigation-item"><a href="#speakers" class="navigation-link">سخنرانان</a></li>
                             <li class="navigation-item"><a href="#schedule" class="navigation-link">برنامه ها</a></li>
-                            <li class="navigation-item"><a href="#prices" class="navigation-link">بلیط ها</a></li>
+                            <li class="navigation-item"><a href="#prices" class="navigation-link">پکیج ها</a></li>
                             <!--<li class="navigation-item"><a href="#gallery" class="navigation-link">گالری</a></li>-->
                             <li class="navigation-item"><a href="#sponsors" class="navigation-link">اسپانسرها</a></li>
 
@@ -735,8 +736,8 @@
     <section id="prices" class="section align-center">
         <div class="container">
             <span class="icon section-icon icon-shopping-04"></span>
-            <h3>بلیط ها</h3>
-            <p class="text-alt">نوع بلیط خود را انتخاب کنید</p>
+            <h3>پکیج ها</h3>
+            <p class="text-alt">نوع پکیج خود را انتخاب کنید</p>
             <br>
 
             <div class="row" id="MeetingTicketTypeDiv">
@@ -962,26 +963,63 @@
         </div>
     </section>
 
-    <div class="modal-window" data-modal="Video-Modal" style="background-color: rgba(2, 2, 2, 0.85);">
-        <div class="modal-box animated" data-animation="zoomIn" data-duration="700" style="opacity: 1;width: 75%">
-            <span class="close-btn icon icon-office-52" onclick="$('#Video').attr('src', '');"></span>
-            @*<div class="container">*@
-                <div class="row">
-                    <div class="col-lg-12 col-md-12 col-sm-12">
-                        <div align="center" class="embed-responsive embed-responsive-16by9">
-                            <video id="Video" autoplay    class="embed-responsive-item" controls style="width: 100% !important">
-                                <source src="/video/video.mp4" type="video/mp4" />
-                                <source src="/video/video.ogv" type="video/ogg" />
-                                <source src="/video/video.webm" type="video/webm" />
-                            </video>
-                        </div>
-                    </div>
 
+    <div class="modal-window" data-modal="Video-Modal1" style="background-color: rgba(2, 2, 2, 0.85);">
+        <div class="modal-box animated" data-animation="zoomIn" data-duration="700" style="opacity: 1;width: 75%">
+            <center>
+                <a href="#" onclick="$('#Video1').attr('src', '');$('#Video2').attr('src', '/Downloads/Teaser.mp4');" data-modal-link="Video-Modal2">
+                    <img src="~/assets/img/teaserThumbNail.png" width="120" height="120" />
+                </a>
+
+            </center>
+            <span class="close-btn icon icon-office-52" onclick="$('#Video1').attr('src', '');"></span>
+            @*<div class="container">*@
+            <div class="row">
+                <div class="col-lg-12 col-md-12 col-sm-12">
+                    <div align="center" class="embed-responsive embed-responsive-16by9">
+                        <video id="Video1" autoplay class="embed-responsive-item" controls style="width: 100% !important">
+                            <source src="/video/video.mp4" type="video/mp4" />
+                            <source src="/video/video.ogv" type="video/ogg" />
+                            <source src="/video/video.webm" type="video/webm" />
+                        </video>
+                    </div>
                 </div>
+
+            </div>
             @*</div>*@
 
         </div>
     </div>
+
+
+    <div class="modal-window" data-modal="Video-Modal2" style="background-color: rgba(2, 2, 2, 0.85);">
+        <div class="modal-box animated" data-animation="zoomIn" data-duration="700" style="opacity: 1;width: 75%">
+            <center>
+                <a href="#" onclick="$('#Video2').attr('src', '');$('#Video1').attr('src', '/Downloads/CavalierRises.mp4');" data-modal-link="Video-Modal1">
+                    <img src="~/assets/img/cavathumbNail.png" width="120" height="120" />
+                </a>
+
+            </center>
+            <span class="close-btn icon icon-office-52" onclick="$('#Video2').attr('src', '');"></span>
+            @*<div class="container">*@
+            <div class="row">
+                <div class="col-lg-12 col-md-12 col-sm-12">
+                    <div align="center" class="embed-responsive embed-responsive-16by9">
+                        <video id="Video2" autoplay class="embed-responsive-item" controls style="width: 100% !important">
+                            <source src="/video/video.mp4" type="video/mp4" />
+                            <source src="/video/video.ogv" type="video/ogg" />
+                            <source src="/video/video.webm" type="video/webm" />
+                        </video>
+                    </div>
+                </div>
+
+            </div>
+            @*</div>*@
+
+        </div>
+    </div>
+
+
 
     <div class="modal-window" data-modal="about" style="background-color: rgba(2, 2, 2, 0.85);">
         <div class="modal-box small animated" data-animation="zoomIn" data-duration="700" style="opacity: 1;">
