--- a/Reservation/Views/Home/Ticketdetails.cshtml
+++ b/Reservation/Views/Home/Ticketdetails.cshtml
@@ -1,5 +1,5 @@
 ﻿@{
-    ViewData["Title"] = "جزئیات بلیط";
+    ViewData["Title"] = "جزئیات پکیج";
     Layout = "~/Views/Shared/_Layout.cshtml";
 @addTagHelper *, Microsoft.AspNetCore.Mvc.TagHelpers
 }
@@ -7,7 +7,7 @@
 
 <section class="section align-center">
     <div class="container">
-        <h1> جزئیات بلیط طرح  <span id="typeName" class="highlight"></span></h1>
+        <h1> جزئیات پکیج طرح  <span id="typeName" class="highlight"></span></h1>
         <br/>
         <h3> قیمت :   <span id="price" class="highlight"></span> میلیون تومان</h3>
     </div>
@@ -68,7 +68,7 @@
         </fieldset>
 
         <fieldset class="col-sm-12">
-            <label style="float: right" for="pass1">نوع بلیط</label>
+            <label style="float: right" for="pass1">نوع پکیج</label>
             <select class="text-right" dir="rtl" style="float: right" id="Cmbtikcet">
 
 
@@ -82,7 +82,7 @@
                 <br>
             </fieldset>*@
 
-        <input type="button" id="BuyTicket" value="خرید بلیط" class="btn">
+        <input type="button" id="BuyTicket" value="خرید پکیج" class="btn">
 
 
     </div>
